<resources>
    <string name="app_name">MedCare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="loginHere">Already have an Account? <u>Login Here.</u></string>
    <string name="registerHere">Create a new Account? <u>Register Here.</u></string>
    <string name="title_activity_profile">Profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="full_name2">Full Name :</string>
    <string name="email2">Email :</string>
    <string name="phone_number">Phone Number :</string>
    <string name="blood_group">Blood Group :</string>
    <string name="address">Address :</string>
    <string name="status">Status :</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="developers">Bikash Gurung</string>
    <string name="share">share</string>
    <string name="third_party_licenses">copyright</string>
    <string name="about_us_description">medcare is something you want.</string>
</resources>