<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <View
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/purple_500"
            android:layout_margin="5dp"/>

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/ic_user"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:id="@+id/rl"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtUsername"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/username"
                />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtUsername1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:visibility="gone"/>
        </RelativeLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/rl"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/full_name2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvFullName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/rl"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/txt1"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/txt1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/email2" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/tvFullName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/txt1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/txt2"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:text="@string/phone_number"/>



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/tvEmail"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/txt3"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/txt3"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:text="@string/blood_group"/>



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBloodType"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/tvPhone"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/txt4"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/txt4"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:text="@string/address"/>



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/tvBloodType"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/txt5"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt6"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/txt5"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:text="@string/status"/>



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/tvAddress"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/txt6"
            />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#7E5627AE"
            android:layout_alignParentBottom="true"
            android:text="@string/edit"
            android:layout_marginBottom="40dp"
            android:layout_toStartOf="@+id/btnLogout"
            android:layout_marginEnd="10dp"
            tools:ignore="RelativeOverlap" />



    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/logout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        />

    </RelativeLayout>

</FrameLayout>