<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <View
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/purple_500"
            android:layout_margin="5dp"/>

        <de.hdodenhof.circleimageview.CircleImageView

            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/ic_user"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/profile_image"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/full_name2" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/profile_image"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/txt1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/txt1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/email2" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/etFullName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/txt1"
            android:background="#595353"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textAllCaps="true"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/txt2"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:text="@string/phone_number"/>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/etEmail"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/txt3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/txt3"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:text="@string/blood_group"/>



        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBloodType"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/etPhone"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/txt4"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/txt4"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:text="@string/address"/>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/etBloodType"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/txt5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt6"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/txt5"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:text="@string/status"/>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etStatus"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/etAddress"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/txt6" />


        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:backgroundTint="#7E5627AE"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/white"
            android:layout_marginRight="5dp"/>

            <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="#7E5627AE"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/white"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>